more section added

--- a/index.html
+++ b/index.html
@@ -135,6 +135,96 @@
         
             </div>
         </section>
+
+        <section class="operations">
+            <h2 class="operation-title">Nationwide Operations In UAE</h2>
+            <div class="operation-content-container">
+                <div class="operation-title-container">
+                    <h2 class="operation-heading">Global Business Is <br> Our Expertise.</h2>
+                    <p class="operation-para">
+                        Make a strategic choice with MHGroup, where unparalleled expertise <br>
+                        meets a skilled team.We specialize in precise supply chain management, <br>
+                        providing holistic coverage across the GCC. Make a strategic choice with <br>
+                        Make a strategic choice with MHGroup, where unparalleled expertise <br>
+                        meets a skilled team.We specialize in precise supply chain management, <br>
+                        providing holistic coverage across the GCC. Make a strategic choice with <br>
+
+                        
+                    </p>
+                </div>
+                <img src="./assets/chairman.png" alt="" class="chairman">
+            </div>
+            <div class="counts">
+                <p>
+                    175+ <br>
+                    <span class="count-para">Brands</span>
+                </p>
+                <p>
+                    2500+ <br>
+                    <span class="count-para">Workforce</span>
+                </p>
+                <p>
+                    3000+ <br>
+                    <span class="count-para">Incoming FCL</span>
+                </p>
+                <p>
+                    18000+ <br>
+                    <span class="count-para">Products (SKUS)</span>
+                </p>
+            </div>
+        </section>
+
+        <section class="testimonials">
+            <h2 class="testimonial-title">Testimonials</h2>
+            <div class="testimonial-card-container">
+                <div class="testimonial-card">
+                    <img src="./assets/parle.png" alt="" class="parle">
+                    <h2 class="card-title">Parle</h2>
+                    <p class="card-para">
+                        MH is a professional managed company
+                        and has a well established distribution
+                        network across the UAE. They service to
+                        all the channels available such as MT, Retail,
+                        GT and Heroca, and their service to the
+                        customer is of high standards.
+                    </p>
+                </div>
+                <div class="testimonial-card">
+                    <img src="./assets/fragata.png" alt="" class="fragata">
+                    <h2 class="card-title">Fragata</h2>
+                    <p class="card-para">
+                        You inspire us all a real privilege for Angel
+                        Camacho Alimentacion to have you as our
+                        distributor for Fragata for 35 years! My
+                        congratulations to the whole MH team for
+                        an excellent job.
+                    </p>
+                </div>
+                <div class="testimonial-card">
+                    <img src="./assets/upfield.png" alt="" class="upfield">
+                    <h2 class="card-title">Upfield</h2>
+                    <p class="card-para">
+                        MH is a real distribution machine with
+                        extensive reach to different channels.
+                        Customers are happy from the service, visit
+                        frequency is high with competitive prices.
+                    </p>
+                </div>
+                <div class="testimonial-card">
+                    <img src="./assets/arla-pro.png" alt="" class="arlo-pro">
+                    <h2 class="card-title">Arla Pro</h2>
+                    <p class="card-para">
+                        Working with MH Enterprises has been a
+                        pleasure. Despite though market conditions in
+                        the last few years, Arla's food service
+                        Business in the UAE has been growing through
+                        MH and this is due to the wide coverage
+                        network across all channels, a strong
+                        focused team and an excellent customer service.
+                    </p>
+                </div>
+            </div>
+        </section>
     </div>
 
         <footer>
