--- a/index.html
+++ b/index.html
@@ -233,8 +233,8 @@
                     United Arab Emirates - Dubai <br>
                     P.O. Box 5771,Al Quoz Industrial <br>
                     Area #3 <br>
-                    <a href="" class="mail-link">
-                    <span class="mail-id"><i class="fa-solid fa-envelope" style="color: #f5f5f5;"></i>info@mhdubai.com</span> <br>
+                    <a href="mailto:info@mhenterprisesdubai.com" target="_blank" class="mail-link">
+                    <span class="mail-id"><i class="fa-solid fa-envelope" style="color: #f5f5f5;"></i>info@mhenterprisesdubai.com</span> <br>
                     </a>
                     <span class="phone"><i class="fa-solid fa-phone" style="color: #f5f5f5;"></i>+971 4 3151444</span>
                 </p>
