--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div class="wraper">
         <section class="about">
             <div class="about-content-container">
-                <img src="./assets/tech.jpg" alt="" class="about-image">
+                <img src="./assets/Tech.jpg" alt="" class="about-image">
                 <div class="about-title-container">
                     <h2 class="about-heading">
                         WELCOME TO SRR
